force-app/main/default/objects/Account/fields/Correo_Peru__c.field-meta.xml
<CustomField>
    <fullName>Correo_Peru__c</fullName>
    <label>Correo Peru</label>
    <type>Email</type>
</CustomField>