force-app/main/default/objects/Account/fields/Direccion__c.field-meta.xml
<CustomField>
    <fullName>Direccion__c</fullName>
    <description>Mayorista direccion</description>
    <formula>BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>help mayorista direccion</inlineHelpText>
    <label>Direccion</label>
    <type>Text</type>
</CustomField>