force-app/main/default/objects/Account/fields/Prueba__c.field-meta.xml
<CustomField>
    <fullName>Prueba__c</fullName>
    <label>Prueba</label>
    <length>50</length>
    <type>Text</type>
</CustomField>