force-app/main/default/objects/Account/fields/Telefono_Peru__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Peru__c</fullName>
    <label>Telefono Peru</label>
    <type>Phone</type>
</CustomField>