force-app/main/default/objects/Account/fields/Text_Area_Rich__c.field-meta.xml
<CustomField>
    <fullName>Text_Area_Rich__c</fullName>
    <description>Text Area Rich</description>
    <label>Text Area Rich</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>