force-app/main/default/objects/Account/fields/Validacion__c.field-meta.xml
<CustomField>
    <fullName>Validacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo creado para capacitación Salesforce</description>
    <inlineHelpText>Colocar checked en caso de que la cuenta</inlineHelpText>
    <label>Validacion</label>
    <type>Checkbox</type>
</CustomField>