force-app/main/default/objects/Account/validationRules/Account_Name_validation_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_Name_validation_Rule</fullName>
    <active>false</active>
    <errorConditionFormula>LEN( Prueba__c ) &lt; 5</errorConditionFormula>
    <errorMessage>El campo prueba no puede tener menos de 5 digitos</errorMessage>
</ValidationRule>